# ocaml-backprop

./: .gitignore  Makefile  README.md  backprop.opam  dune-project
.github/workflows/: build.yml
examples/: Makefile  dune  gru.ml  lstm.ml  rnn.ml  sine.ml  square.ml  test.ml
examples/guitar-amp/: .gitignore  Makefile  README.md  WAV.ml  amp.ml  dune  net.ml  output.ml
examples/mnist/: Makefile  README.md  dune  idx.ml  mnist.ml
examples/mnist/fashion/: .gitignore  Makefile
examples/moons/: Makefile  README.md  dune  moons.ml
examples/sum-rnn/: Makefile  README.md  data.ml  dune  net.ml  sum.ml
examples/unit-tests/: Makefile  README.md  dune  gru.ml  lstm.ml
src/: Makefile  algebra.ml  backprop.ml  backpropagatable.ml  differentiable.ml  dune  extlib.ml  net.ml  test.ml  vector.ml
