(executable
 (name sine)
 (libraries backprop)
 (modules sine)
)

(rule
 (alias runtest)
 (action (run ./sine.exe))
)

(executable
 (name square)
 (libraries backprop)
 (modules square)
)

(rule
 (alias runtest)
 (action (run ./square.exe))
)

(executable
 (name rnn)
 (libraries backprop)
 (modules rnn)
)

(rule
 (alias runtest)
 (action (run ./rnn.exe))
)
