(executable
 (name sine)
 (libraries backprop)
 (modules sine)
)

(rule
 (alias runtest)
 (action (run ./sine.exe))
)

(executable
 (name square)
 (libraries backprop)
 (modules square)
)

(rule
 (alias runtest)
 (action (run ./square.exe))
)

(executable
 (name lstm)
 (libraries backprop)
 (modules lstm)
)

(rule
 (alias runtest)
 (action (run ./lstm.exe))
)
